pipelight (0.1-2) UNRELEASED; urgency=low

  * Fixed build flags for wingw32. (fixes lp issue 1213725)
  * Added undocumented option gccRuntimeDlls to the config file
  * Added experimental usermode timer support (experimental-userModeTimer)
  * Added an alternative event handling method using async calls
  	to make it work with browsers like Midori which don't support timers.
  * Fixed the wine xembed patch such that it also should work on KDE
    and others (fixes lp issue 1213784)
  * Added PIPELIGHT_CONFIG env. variable to overwrite the config search path.
  * Merged with changes by Joseph Yasi (merge 180968)
    Allows to define WINEARCH via the config variable wineArch.
  * Added fix to make Pipelight working with Opera (fixes lp issue 1214447)
  * Added the possibility to enable/disable pipelight system-wide
  * Changed meaning of winePath variable in config file - its now the path to
    the wine directory, not the wine executable (see default config)
  * Prevent Wine from asking for Gecko or Mono
  * Automatically enable/disable windowlessMode when required
  * Detect Opera browser automatically to set eventAsyncCall to true

 -- Michael Mueller <michael@fds-team.de>  Mon, 20 Aug 2013 00:35:00 +0200


pipelight (0.1-1) RELEASED; urgency=low

  * Initial release.

 -- Michael Mueller <michael@fds-team.de>  Mon, 16 Aug 2013 20:26:54 +0200