@@ -109,8 +109,6 @@ bool debugStatusMessage(NPP instance, std::string name, std::string result, std:
 }
 
 void debugFile(NPP instance,std::string filename){
-	debugSection(instance, "Content of file: " + filename);
-
 	std::ifstream 	file;
 	file.open(filename);
 
@@ -127,16 +125,119 @@ void debugFile(NPP instance,std::string filename){
 }
 
 void runDiagnostic(NPP instance){
-	std::cerr << "[PIPELIGHT] Diagnostic" << std::endl;
+	std::cerr << "[PIPELIGHT] Running diagnostic checks" << std::endl;
 
 	if(initOkay){
-		debugSimpleMessage(instance, \
-			"Pipelight is working, but you still need to clear the plugin cache data");
+		debugStatusMessage(instance, \
+			"Checking for correct plugin description", \
+			"failed", \
+			"Pipelight is working, but you still need to clear the plugin cache!");
+
+		debugSimpleMessage(instance, "Take a look in the FAQ on how to do that.");
 		return;
 	}
 
+	debugSection(instance, "Configuration of Pipelight");
+	if(config.configPath == "" || !checkIfExists(config.configPath)){
+		debugStatusMessage(instance, "Checking if config exists", \
+			"failed", \
+			(config.configPath != "") ? ("Please install a default configuration file at " + config.configPath) : "");
+		return;
+	}
+
+	debugStatusMessage(instance, "Checking if config exists", "okay", config.configPath);
+
+	// Check winePath
+	debugStatusMessage(instance, "Checking if winePath is set and exists", \
+		(config.winePath != "" && checkIfExists(config.winePath)) ? "okay" : "failed", \
+		(config.winePath != "") ? config.winePath : "not set");
+
+	// Check if winePath/bin/wine and winePath/bin/winepath exists
+	if(config.winePath != "" && !config.winePathIsDeprecated){
+		std::string wineBinary 		= config.winePath + "/bin/wine";
+		std::string winePathBinary	= config.winePath + "/bin/winepath";
+
+		debugStatusMessage(instance, "Checking if winePath/bin/wine exists", \
+			checkIfExists(wineBinary) ? "okay" : "failed", \
+			wineBinary);
+
+		debugStatusMessage(instance, "Checking if winePath/bin/winepath exists", \
+			checkIfExists(winePathBinary) ? "okay" : "failed", \
+			winePathBinary);
+	}
+
+	// Check winePrefix
+	debugStatusMessage(instance, "Checking if winePrefix is set", \
+		(config.winePrefix != "") ? "okay" : "not set", \
+		config.winePrefix );
+
+	if(config.winePrefix != ""){
+		bool winePrefixFound = checkIfExists(config.winePrefix);
+
+		debugStatusMessage(instance, "Checking if winePrefix exists", \
+			winePrefixFound ? "okay" : "failed");
+
+		if(!winePrefixFound){
+			bool dependencyInstallerFound = (config.dependencyInstaller != "" && checkIfExists(config.dependencyInstaller));
+
+			debugStatusMessage(instance, "Checking if dependencyInstaller is set and exists", \
+				dependencyInstallerFound ? "okay" : "failed", \
+				(config.dependencyInstaller != "") ? config.dependencyInstaller : "not set");
+
+			if(dependencyInstallerFound){
+				bool silverlightVersionOkay = ( config.silverlightVersion == "silverlight4.0" || \
+												config.silverlightVersion == "silverlight5.0" || \
+												config.silverlightVersion == "silverlight5.1" );
+
+				debugStatusMessage(instance, "Checking for silverlightVersion is correct", \
+					silverlightVersionOkay ? "okay" : "failed", \
+					config.silverlightVersion
+					);
+
+				if(!silverlightVersionOkay){
+					debugSimpleMessage(instance, "The version you have specified is none of the default ones!");
+				}
+
+			}else{
+				debugSimpleMessage(instance, "You either have to install the dependency installer script or setup the wine prefix manually.");
+				debugSimpleMessage(instance, "Depending on your distribution you probably will have to execute some post-installation script to do that.");
+			}
+		}
+
+	}else{
+		debugSimpleMessage(instance, "As you have no winePrefix defined the environment variable WINEPREFIX will be used.");
+		debugSimpleMessage(instance, "This script is not able to check if everything is okay with your wine prefix!");	
+	}
+
+	// Check dllPath / dllname
+	bool dllPathSet 		= (config.dllPath != "" && config.dllName != "");
+	std::string unixPath = "";
+	if(dllPathSet) unixPath	= convertWinePath(config.dllPath + "\\" + config.dllName);
+	bool dllPathFound 		= (unixPath != "" && checkIfExists(unixPath));
+
+	debugStatusMessage(instance, "Checking if dllPath/dllname is set and exists", \
+		dllPathFound ? "okay" : "failed");
+
+	debugSimpleMessage(instance, "dllPath = " + config.dllPath);
+	debugSimpleMessage(instance, "dllName = " + config.dllName);
+
+	if(unixPath == ""){
+		debugSimpleMessage(instance, "Unable to verify if this DLL exists, please check this manually!");
+		if(config.winePathIsDeprecated){
+			debugSimpleMessage(instance, "(This check requires winePath to be a directory in your config)");
+		}
+	}else{
+		debugSimpleMessage(instance, unixPath);
+	}
+
+	// Check pluginLoaderPath
+	debugStatusMessage(instance, "Checking if pluginLoaderPath is set and exists", \
+		(config.pluginLoaderPath != "" && checkIfExists(config.pluginLoaderPath)) ? "okay" : "failed", \
+		(config.pluginLoaderPath != "") ? config.pluginLoaderPath : "not set");
+
+	debugSection(instance, "Distribution");
+	debugFile(instance, "/etc/issue");
+
+	debugSection(instance, "Content of file: " + config.configPath);
 	debugFile(instance, config.configPath);
-
-	// TODO: Add here additional diagnostic checks
-
 }
